Add exec api
